build.gradle:  comments and whitespace